# calculator-cli

./: .gitignore  .gitlab-ci.yml  .gitmodules  AGENTS.md  CMakeLists.txt  Cargo.toml  GITLAB_SETUP.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LOCAL_BUILD_GUIDE.md  NPM_README.md  PUBLISH.md  README.md  README_WSL.md  README_zh.md  SIMPLE_PUBLISH.md  WSL_BUILD_GUIDE.md  analyze.rs  analyze_8119.rs  build_linux.sh  build_macos.sh  build_windows.bat  calculator  calculator-cli-0.1.0.tgz  calculator_tests.cpp  complex_number.hpp  cubic.hpp  debug_test.rs  debug_test2.rs  debug_test3.rs  debug_test4.rs  debug_test5.rs  debug_test6.rs  debug_test7.rs  debug_test8.rs  fractions.hpp  index.js  latex_renderer.cpp  latex_renderer.hpp  (+29 more)
.cache/clangd/index/: calculator_tests.cpp.DC5D59A7149B1B6F.idx  complex_number.hpp.3AF5663901E3508B.idx  fractions.hpp.DCC6F6B5FC0D376A.idx  latex_renderer.cpp.FA1C41EE54EBE919.idx  latex_renderer.hpp.0DEB128B42752EE6.idx  main_cli.cpp.1B0A64E9C46B0B52.idx  pretty_output.cpp.23F101F24AAB5FF1.idx  pretty_output.hpp.4DEFDD0863F3A8E0.idx  pretty_output_config.cpp.B5F292B03837B541.idx  pretty_output_config.hpp.FDC4BB9C85F62311.idx  string_processing.cpp.C9D9B084114C25D7.idx  string_processing.hpp.8789C3A91E61F1B2.idx  symbolic_solver.cpp.8B53DF5BC2F4C513.idx  symbolic_solver.hpp.0CDA6129C75E0B1D.idx  unicode_formatter.cpp.6B808AC94FDEE0D5.idx  unicode_formatter.hpp.F2C29F26A1BCAFC1.idx
.github/workflows/: c-cpp.yml  release.yml
3+time_equation/: quadric.hpp  quadric.md
build_test/: .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  compile_commands.json
debug/log/: job-logs_mac.txt
openspec/: project.md
openspec/changes/add-npm-distribution/: design.md  proposal.md  tasks.md
openspec/changes/add-npm-distribution/specs/distribution/: spec.md
openspec/changes/add-tui-output/: tasks.md
openspec/changes/add-tui-output/specs/cli-interface/: spec.md
openspec/changes/archive/2026-02-18-remove-npm-layer/: design.md  proposal.md  spec.md  tasks.md
openspec/changes/archive/2026-02-19-add-npm-distribution/: design.md
openspec/changes/archive/2026-02-19-fix-divide-by-zero-undefined/specs/division-by-zero-result/: spec.md
openspec/changes/archive/2026-02-19-fix-fraction-partialord/: proposal.md
openspec/changes/archive/2026-02-19-fix-fraction-partialord/specs/core/: spec.md
openspec/changes/archive/2026-02-19-refactor-to-rust/: design.md
openspec/changes/archive/2026-02-19-refactor-to-rust/specs/cli-interface/: spec.md
openspec/changes/archive/2026-02-19-refactor-to-rust/specs/core-arithmetic/: spec.md
openspec/changes/archive/2026-02-19-refactor-to-rust/specs/linear-systems/: spec.md
openspec/changes/archive/2026-02-19-refactor-to-rust/specs/output-formatting/: spec.md
openspec/changes/archive/2026-02-20-add-tui-output/: design.md  proposal.md
openspec/changes/archive/2026-02-20-add-tui-output/specs/tui-interface/: spec.md
openspec/changes/archive/2026-02-20-fix-quadratic-complex-output/: tasks.md
openspec/changes/archive/2026-02-20-fix-quadratic-complex-output/specs/quadratic-solution-correctness/: spec.md
openspec/changes/archive/2026-02-20-improve-equation-parsing/: proposal.md
openspec/changes/archive/2026-02-20-improve-equation-parsing/specs/equation-solving/: spec.md
openspec/changes/archive/2026-02-21-fix-subtraction-input-without-spaces/: design.md  proposal.md  tasks.md
openspec/changes/delete-last-result-box/: design.md  proposal.md  tasks.md
openspec/changes/delete-last-result-box/specs/tui-interface/: spec.md
openspec/changes/fix-divide-by-zero-undefined/: design.md  proposal.md  tasks.md
openspec/changes/fix-fraction-partialord/: design.md  tasks.md
openspec/changes/fix-fraction-partialord/specs/core/: spec.md
openspec/changes/fix-quadratic-complex-output/: design.md  proposal.md  tasks.md
openspec/changes/fix-subtraction-input-without-spaces/specs/expression-evaluation/: spec.md
openspec/changes/improve-equation-parsing/: tasks.md
openspec/changes/improve-math-output-format/: design.md  proposal.md  tasks.md
openspec/changes/improve-math-output-format/specs/math-output-formatting/: spec.md
openspec/changes/optimize-tui-border-rounded-translucent-lines/: design.md  proposal.md  tasks.md
openspec/changes/optimize-tui-border-rounded-translucent-lines/specs/tui-interface/: spec.md
openspec/changes/refactor-to-rust/: README.md  proposal.md  tasks.md
openspec/changes/refactor-to-rust/specs/equation-solving/: spec.md
openspec/changes/refactor-to-rust/specs/expression-evaluation/: spec.md
openspec/changes/use-tui-math-for-math-output-rendering/: design.md  proposal.md  tasks.md
openspec/changes/use-tui-math-for-math-output-rendering/specs/output-formatting/: spec.md
openspec/changes/use-tui-math-for-math-output-rendering/specs/tui-interface/: spec.md
openspec/specs/cli-interface/: spec.md
openspec/specs/core/: spec.md
openspec/specs/core-arithmetic/: spec.md
openspec/specs/distribution/: spec.md
openspec/specs/division-by-zero-result/: spec.md
openspec/specs/equation-solving/: spec.md
openspec/specs/expression-evaluation/: spec.md
openspec/specs/linear-systems/: spec.md
openspec/specs/output-formatting/: spec.md
openspec/specs/quadratic-solution-correctness/: spec.md
openspec/specs/tui-interface/: spec.md
scripts/: build-binaries.js  fix-wsl-build.sh  install.js  postinstall.js  setup-wsl.js
src/: lib.rs  main.rs
src/core/: complex.rs  fraction.rs  mod.rs  types.rs
src/output/: ascii.rs  latex.rs  mod.rs  pretty.rs  unicode.rs  unicode_debug.rs
src/parser/: expression.rs  mod.rs  tokenizer.rs
src/solver/: cubic.rs  linear.rs  linear_system.rs  mod.rs  quadratic.rs  quartic.rs  quintic.rs
src/tui/: app.rs  border_style.rs  input.rs  latex.rs  math_renderer.rs  mod.rs  result_card.rs
src/utils/: math.rs  mod.rs
