[package]
name = "calculator-tui"
version = "2.2.0"
edition = "2021"
rust-version = "1.70.0"
description = "A command-line calculator with symbolic math support"
license = "MIT"
repository = "https://github.com/Mcas-996/calculator-cli"
authors = ["Allen"]

[[bin]]
name = "calctui"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
num-rational = "0.4"
num-traits = "0.2"
regex = "1.10"
ratatui = "0.26"
crossterm = "0.27"
tui-math = "0.1.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
